--- a/style.css
+++ b/style.css
@@ -14,13 +14,11 @@ ul li {
 h1 {
     font-size: 2.25em;
     color: darkmagenta;
-    line-height: 1.33333em;
     margin-top: 0.66667em;
     margin-bottom: 0.66667em
 }
 h2 {
     font-size: 1.5em;
-    line-height: 1em;
     margin-top: 1em;
     color: mediumpurple;
     margin-bottom: 1em
@@ -28,7 +26,15 @@ h2 {
 h3 {
     font-size: 1.3125em;
     color: darkgoldenrod;
-    line-height: 1.14286em;
     margin-top: 1.14286em;
     margin-bottom: 1.14286em
+}
+
+h1, h2, h3
+{
+	line-height: 20px;
+	vertical-align: bottom;
+	margin: 0,0,10px,0;
+	border-bottom: 1px solid black;;
+
 }
